objects/MasterdataGlobalValueSet__mdt.object
<CustomObject>
    <fields>
        <fullName>ABB2AllOtherBUs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABB -&gt; All other BU&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ControlingFieldFilter__c</fullName>
        <label>Controling Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFilter__c</fullName>
        <label>Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchicalFiltering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchical Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDomain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterdataRestRequest__c</fullName>
        <label>Masterdata Rest Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesforceAPIValue__c</fullName>
        <label>Salesforce API Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceControlingValue__c</fullName>
        <label>Salesforce Controling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceEnglishTranslation__c</fullName>
        <label>Salesforce English Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceGlobalPicklistName__c</fullName>
        <label>Salesforce Global Picklist Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceValue__c</fullName>
        <label>Salesforce Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Global_Value_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Global Value Set</label>
        <type>Checkbox</type>
    </fields>
    <label>Masterdata Global Value Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SalesforceGlobalPicklistName__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsDomain__c</columns>
        <columns>SalesforceAPIValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Masterdata Global Value Sets</pluralLabel>
</CustomObject>